--- a/index.html
+++ b/index.html
@@ -2,9 +2,6 @@
 <html>
 <body>
 
-<h1>Hello From Docker!!</h1>
-
-<p> When we commit the code in git,by using webhooks-by using web hooks jenkins job will be built! !!!!</p>
-<p>This job is built when we commited the code</p>
+<h1>Hello From Docker and Jenkins !!</h1>
 </body>
 </html>
